--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22hWNQ5rDb%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22z2qlFIui%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
     },
     {
         "key": "locale",
@@ -50,62 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x733",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100049235086690",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
-    },
-    {
-        "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWVDPop1eZ_0LqNe02NqmYXUETk_1L0MIInuNg.BnU2fO..AAA.0.0.BnwMtw.AWUEnK1nbc8",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
-    },
-    {
-        "key": "xs",
-        "value": "35%3AO10LLpUAAtIkvQ%3A2%3A1740688240%3A-1%3A5903",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100734181%3BT%3A29012554",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2754%3Btimestamp%3A1740753262",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.466Z"
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
     },
     {
         "key": "vpd",
@@ -113,7 +59,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-28T14:35:03.466Z",
-        "lastAccessed": "2025-02-28T14:35:03.467Z"
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100049235086690",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
+    },
+    {
+        "key": "fr",
+        "value": "0Ce5OZhMDKmMWCT3i.AWXfkRYhdFXhMsk5ybZ-SHo752medi2wlRYTYA.BnU2fO..AAA.0.0.Bnwcvj.AWWJY1TnZj0",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
+    },
+    {
+        "key": "xs",
+        "value": "40%3A7Vdpgq8SO9T7Ww%3A2%3A1740753892%3A-1%3A5903",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x733",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101321604%3BT%3A29012565",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2754%3Btimestamp%3A1740753903",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-28T14:45:33.814Z",
+        "lastAccessed": "2025-02-28T14:45:33.814Z"
     }
 ]
