--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "c_user",
@@ -86,26 +86,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWWU_uCmWb2XiPUFI8suqAsjWea-N2H-SoTEzA.BnU2fO..AAA.0.0.BnxJQl.AWUYsx4BmnQ",
+        "value": "0Ce5OZhMDKmMWCT3i.AWW8qgMH06TUDQLqGi7NKAH57A5YgBM9MG9e5Q.BnU2fO..AAA.0.0.BnxP-V.AWVy5Vlj_5I",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "xs",
-        "value": "39%3AwEluLzcIQ7UPkA%3A2%3A1740936231%3A-1%3A5903",
+        "value": "30%3Az5Ovbp79EzjoSA%3A2%3A1740963734%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "wd",
@@ -113,25 +113,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "fbl_st",
-        "value": "101538349%3BT%3A29015603",
+        "value": "101021239%3BT%3A29016062",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2756%3Btimestamp%3A1740936238",
+        "value": "v2%3Bclient_version%3A2756%3Btimestamp%3A1740963741",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-02T17:24:09.321Z",
-        "lastAccessed": "2025-03-02T17:24:09.321Z"
+        "creation": "2025-03-03T01:02:36.201Z",
+        "lastAccessed": "2025-03-03T01:02:36.201Z"
     }
 ]
